// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/aleofreddi/csi-sanlock-lvm/proto";

enum DiskRpcType {
  DISK_RPC_PAYLOAD_EMPTY = 0;
  DISK_RPC_PAYLOAD_BUSY = 1;
  DISK_RPC_PAYLOAD_REQUEST = 2;
  DISK_RPC_PAYLOAD_RESPONSE = 3;
}

message DiskRpcMessage {
  google.protobuf.Timestamp time = 1;

  string method = 2;
  bytes request = 3;
  bytes response = 4;
  string error_msg = 5;
  uint32 error_code = 6;
}

